Fix expert image size on mobile

--- a/style.css
+++ b/style.css
@@ -495,21 +495,6 @@ a {
 
         .expert-header {
             display: flex;
-            align-items: center;
-            gap: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        .expert-header img {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background: #eee;
-        }
-
-        .expert-quote {
-            font-style: italic;
-            color: #555;
             position: relative;
         }
 
